# rust-structs

./: Cargo.toml
src/: associated-function-1.rs  methods-1.rs  methods-2.rs  structs-3.rs  structs-4.rs  structs-5.rs
